# broken

./: Cargo.toml
model/: Cargo.toml
model/src/: lib.rs
server/: Cargo.toml
server/src/: build.rs  ws.rs
web/: Cargo.toml
web/src/: error.rs  ws.rs
