[package]
name = "dioxus-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { workspace = true, features = ["web"] }

dioxus = { version = "0.5.1", features = ["web"] }
dioxus-logger = "0.5.1"
futures = "0.3.30"
manganis = "0.2.2"
gloo-net = { workspace = true, features = ["websocket"] }
gloo-utils = "0.2.0"

serde = { workspace = true }
serde_json = { workspace = true }